[gd_scene load_steps=3 format=3 uid="uid://s30bejfhqqmx"]

[ext_resource type="Script" uid="uid://coe4keclrj4gt" path="res://scripts/main.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c8yqv7h8forge" path="res://art/placeholders/forge_background.png" id="5"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="ForgeUI" type="CanvasLayer" parent="."]

[node name="DungeonUI" type="CanvasLayer" parent="."]

[node name="FadeLayer" type="CanvasLayer" parent="."]

[node name="FadeOverlay" type="ColorRect" parent="FadeLayer"]
modulate = Color(1, 1, 1, 0)
color = Color(0, 0, 0, 1)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ForgeArea" type="Node2D" parent="."]

[node name="ForgeBackground" type="Sprite2D" parent="ForgeArea"]
position = Vector2(640, 360)
texture = ExtResource("5")

[node name="ForgeLabel" type="Label" parent="ForgeArea"]
offset_left = 200.0
offset_top = 200.0
offset_right = 200.0
offset_bottom = 200.0
text = "FORJA"

[node name="DungeonArea" type="Node2D" parent="."]
position = Vector2(0, 3000)

[node name="DungeonLabel" type="Label" parent="DungeonArea"]
offset_left = 200.0
offset_top = 200.0
offset_right = 200.0
offset_bottom = 200.0
text = "DUNGEON"
